# playlist_coloc

./: .gitignore  README.md  app.py  deezer_api.py  knn_playlist_model.pickle  pyproject.toml  requirements.txt  train.py
python_scripts/: __init__.py  app.py  deezer_api.py  knn.py  main.py  predict_script.py  prepare_playlists.py  pyproject.toml  safe_mlb.py  train.py  utils.py
static/: style.css
static/js/: script.js
templates/: index.html
