[tool.poetry]
name = "playlist_coloc"
version = "0.1.0"
description = "Deezer playlist comparator"
authors = ["jdectot <juju.dectot@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
deezer-python = "^7.2.0"
envparse = "^0.2.0"
flask = "^3.1.2"
scikit-learn = "^1.7.2"
pandas = "^2.3.3"
scipy = "^1.16.2"
flask-cors = "^6.0.1"

[poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"